# ceres

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/: dependabot.yml
ceres/: __main__.py  balances.py  ceresbot.py  cli.py  dashboard.py  main.py  spotarbitrage.py  utils.py
ceres/cli/: cli.py  common.py
ceres/exchange/: __init__.py  exchange.py  exchangehelpers.py  exchangeshandler.py
ceres/remote/: __init__.py  telegram.py
ceres/strategy/: __init__.py  spotarbitrage.py  strategybase.py
