[metadata]
name =  ceres
version = attr: ceres.__version__
license = GPLv3
license_files = LICENSE
author = erdieee
home_page = https://github.com/erdieee/ceres
description = Ceres - Arbitrage Bot
long_description = file: README.md
long_description_content_type = text/markdown

[options]
zip_safe = False
include_package_data = True
packages = find:
python_requires = >= 3.8

[options.entry_points]
console_scripts =
    ceres = ceres.main:main